optimize query construction

--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -24,6 +24,7 @@ library
   -- other-extensions:
   build-depends:       base >=4.6 && <4.7,
                        postgresql-simple,
+                       postgresql-libpq,
                        dlist,
                        blaze-builder,
                        bytestring,
