--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -2,7 +2,7 @@
 -- further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                postgresql-simple-dsl
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            PostgreSQL EDSL built on top of postgresql-simple
 -- description:
 homepage:            https://github.com/sopvop/postgresql-simple-dsl
@@ -31,7 +31,8 @@ library
                        transformers,
                        text,
                        mtl,
-                       vector
+                       vector,
+                       containers
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs
