--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -18,6 +18,8 @@ cabal-version:       >=1.10
 library
   exposed-modules:
      Database.PostgreSQL.Simple.Dsl
+     Database.PostgreSQL.Simple.Dsl.Record
+     Database.PostgreSQL.Simple.Dsl.Query
      Database.PostgreSQL.Simple.Dsl.Internal
   other-modules:
   -- other-extensions:
