--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -38,3 +38,15 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs
+
+benchmark basic
+  hs-source-dirs: benchmarks
+  main-is: Basic.hs
+  type: exitcode-stdio-1.0
+  build-depends: base >= 4.6 && < 5,
+                 postgresql-simple-dsl,
+                 postgresql-simple,
+                 criterion,
+                 bytestring
+  default-language: Haskell2010
+  ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs -rtsopts
