--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -23,18 +23,16 @@ library
      Database.PostgreSQL.Simple.Dsl.Internal
   other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <5,
+  build-depends:       base >=4.7 && <5,
                        postgresql-simple,
                        postgresql-libpq,
                        dlist,
                        blaze-builder,
                        bytestring,
-                       tagged,
                        transformers,
                        text,
                        mtl,
-                       vector,
-                       containers
+                       vector
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs 
