--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -20,6 +20,7 @@ library
      Database.PostgreSQL.Simple.Dsl
      Database.PostgreSQL.Simple.Dsl.Record
      Database.PostgreSQL.Simple.Dsl.Query
+     Database.PostgreSQL.Simple.Dsl.IntArray
      Database.PostgreSQL.Simple.Dsl.Internal
   other-modules:
   -- other-extensions:
@@ -32,7 +33,8 @@ library
                        transformers,
                        text,
                        mtl,
-                       vector
+                       vector,
+                       time
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs 
