--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -2,7 +2,7 @@
 -- further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                postgresql-simple-dsl
-version:             0.2.0.0
+version:             0.3.0.0
 synopsis:            PostgreSQL EDSL built on top of postgresql-simple
 -- description:
 homepage:            https://github.com/sopvop/postgresql-simple-dsl
@@ -23,6 +23,7 @@ library
      Database.PostgreSQL.Simple.Dsl.Functions
      Database.PostgreSQL.Simple.Dsl.IntArray
      Database.PostgreSQL.Simple.Dsl.Internal
+     Database.PostgreSQL.Simple.Dsl.Types
   other-modules:
   -- other-extensions:
   build-depends: base >= 4.7 && < 5
@@ -36,10 +37,11 @@ library
                , time
                , transformers
                , unordered-containers
+               , vinyl
 
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs 
+  ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs
 -- -auto-all -caf-all
 
 benchmark basic
@@ -53,5 +55,5 @@ benchmark basic
                , postgresql-simple-dsl
                , unordered-containers
   default-language: Haskell2010
-  ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs -rtsopts 
+  ghc-options: -funbox-strict-fields -O2 -Wall -fwarn-tabs -rtsopts
 -- -auto-all -caf-all
