--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -2,7 +2,7 @@
 -- further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                postgresql-simple-dsl
-version:             0.3.0.0
+version:             0.4.0.0
 synopsis:            PostgreSQL EDSL built on top of postgresql-simple
 -- description:
 homepage:            https://github.com/sopvop/postgresql-simple-dsl
@@ -24,12 +24,11 @@ library
      Database.PostgreSQL.Simple.Dsl.IntArray
      Database.PostgreSQL.Simple.Dsl.Internal
      Database.PostgreSQL.Simple.Dsl.Types
+     Database.PostgreSQL.Simple.Dsl.Escaping
   other-modules:
   -- other-extensions:
   build-depends: base >= 4.7 && < 5
-               , blaze-builder
                , bytestring
-               , dlist
                , mtl
                , postgresql-libpq
                , postgresql-simple
