--- a/postgresql-simple-dsl.cabal
+++ b/postgresql-simple-dsl.cabal
@@ -30,11 +30,11 @@ library
                , bytestring              >= 0.10.6   && < 0.12
                , mtl                     >= 2.2.1    && < 2.3
                , postgresql-simple       >= 0.5.1.3  && < 0.8
-               , text                    >= 1.2.2.1  && < 1.3
-               , time                    >= 1.5.0.1  && < 1.12
+               , text                    >= 1.2.2.1  && < 2.2
+               , time                    >= 1.5.0.1  && < 1.14
                , transformers            >= 0.4.2    && < 0.6
                , unordered-containers    >= 0.2.7    && < 0.3
-               , vector                  ^>= 0.12.0.3
+               , vector                  >= 0.12.0.3 && < 0.14
                , vinyl
 
   hs-source-dirs:      src
